# libertas-travel

./: .file_size_baseline.toml  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  auth.py  database.py  dev.sh  geocode_venues.py  geocoding_worker.py  import_venues.py  pyproject.toml  render.yaml  requirements.txt  server.py  test_parse.py
.github/workflows/: test.yml
agents/: __init__.py
agents/admin/: __init__.py  dashboard.py  handler.py  routes.py
agents/auth/: __init__.py  credentials.py  routes.py
agents/common/: __init__.py  categories.py  flask_utils.py  llm.py  templates.py
agents/create/: __init__.py  chat_handler.py  (+9 more)
data/: airline_codes.csv  florence_day_trip.json  venues_seed.csv
database/: __init__.py  connection.py  drafts.py  sharing.py  trips.py  users.py  venues.py
docs/: fiat-lux-agents.md  future-email-import.md  recommendations.md
memory/: MEMORY.md  feedback_testing.md  project_document_parser.md  shorthand_fla.md
scripts/: __init__.py  check_file_size.py  check_marketing_copy.py  check_no_em_dashes.py  check_users.sh  geocode_venues.py  import_venues.py  launch-stats.sh  test_parse.py
tests/: conftest.py  test_archive_trips.py  test_calendar_export.py  test_create_handler.py  test_database.py  test_file_parsers.py  test_flask_utils.py  test_flight_parsing.py  test_google_maps_parser.py  test_icon_picker.py  test_ics_import.py  test_integration.py  test_link_resolver.py  test_mapper.py  test_parser.py  test_recommendations.py  test_routes.py  test_summarizer.py  test_trip_bucketing.py  test_upload_handlers.py
(+101 files in other folders)
