[project]
name = "libertas"
version = "0.1.0"
description = "Agentic travel solution with specialized agents for trip planning"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "folium>=0.18.0",
    "geopy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
itinerary = "agents.itinerary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
